2008-06-04  Alexey Torkhov  <atorkhov@gmail.com>

	* configure.ac, libwfut/ChannelParser.cpp, libwfut/FileParser.cpp,
	  libwfut/Makefile.am, libwfut/tinyxml.cpp, libwfut/tinyxml.h,
	  tools/Makefile.am: Last patch was applied to wrong incarnation of
	  tinyxml. This is right one. Also this fixes compatibility with new
	  version of tinyxml and compile problem.

2008-05-30  Alexey Torkhov  <atorkhov@gmail.com>

	* configure.ac, tinyxml/tinyxml.cpp, tinyxml/tinyxml.h: Use system
	  tinyxml library if available.

2008-05-16  Alexey Torkhov  <atorkhov@gmail.com>

	* libwfut/platform.cpp: Fix to support gcc 4.3.

2008-04-09  Simon Goodall  <simon@worldforge.org>

	* python/wfut-client.py, python/WUFTCore.py, python/Makefile.am: Added
	  a new file containing the core parts of the update process in a
	  class and changed wfut-python.py to use this class.

2008-04-08  Simon Goodall  <simon@worldforge.org>

	* python/Makefile.am, python/wfut-python.py: Added a sample python
	  implementation of the wfut command line tool.

2008-04-02  Simon Goodall  <simon@worldforge.org>

	* NEWS: 0.2.0 Released.

2008-03-27  Simon Goodall  <simon@worldforge.org>

	* python/WFUT.i: Create python equivalents for typedefs. Add
	  UpdateReason callback.

2008-03-27  Simon Goodall  <simon@worldforge.org>

	* Makefile.am: Add autogen.sh, libwfut.spec, libwfut.spec.in and
	  libwfut.dox as EXTRA_DIST files.

2008-03-25  Simon Goodall  <simon@worldforge.org>

	* Makefile.am, configure.ac, libwfut-0.1.pc.in, libwfut-0.2.pc.in,
	  libwfut/Makefile.am, python/Makefile.am, tools/Makefile.am: Update
	  version numbers to 0.2.0.

2008-03-25  Simon Goodall  <simon@worldforge.org>

	* libwfut/ChannelParser.cpp, libwfut/FileParser.cpp,
	  libwfut/MirrorParser.cpp: Fix parse error detection when parsing an
	  XML string.

2008-03-05  Simon Goodall  <simon@worldforge.org>

	* libwfut/platform.cpp: Change how execute perms are set to try and