@@ -1,3 +1,8 @@
+2008-07-09  Simon Goodall  <simon@worldforge.org>
+
+	* python/wfut-server.py: Added a simple server capable of serving HTTP
+	  requests for a wfut repository. Uses avahi to broadcast URL.
+
 2008-06-04  Alexey Torkhov  <atorkhov@gmail.com>
 
 	* configure.ac, libwfut/ChannelParser.cpp, libwfut/FileParser.cpp,
